css/main.css
@charset "utf-8";
@font-face {
    font-family: 'migmixBold';
    src: url('../fonts/migmix-2p-20200307/migmix-2p-bold.ttf') format('truetype');
}
@font-face {
    font-family: 'migmixRegular';
    src: url('../fonts/migmix-2p-20200307/migmix-2p-regular.ttf') format('truetype');
}
@font-face {
    font-family: 'FiraCodeRegular';
    src: url('../fonts/Fira_Code_v6.2/ttf/FiraCode-Regular.ttf') format('truetype');
}
details {
    border-left:5px solid #c0e2fb;  /* #c0e2fb is main color of Haibala. */
    padding:2px 8px;
}
figure{text-align:center;}
figcaption{color:grey;font:10px ;}
img:not(.default){
    margin: auto;
    width: 88%; /* スマホで表示時に画像のはみ出しを防止 *//* bodyより大きいとoverflow */
    max-width: 960px;
    height:auto;
    max-height: 832px;
}
img.logo{
    width: 64%;
    max-width: 256px;
    height:auto;
}
img.pixivlogo{
    margin: auto;
    min-width: 24px;    /* 24px以下にしない */
    width: 8%;  /* デカすぎた */
    max-width: 32px;
    height:auto;
    max-height: 32px;
}
h1{
    color: #000000;
}
h1.bigtitle{
    font-size: 36px;
}
h2{
    position: relative;
    padding: 0.25em 0.5em;
    color: rgb(255, 255, 255);
    background-color: #000000;
    font-family: 'migmixRegular'; /* 'migmixBold'; */
    border-radius: 0.5em;/*角丸*/
}
h2:after {
    position: absolute;
    content: '';
    top: 100%;
    left: 30px;
    border: 15px solid transparent;
    border-top: 10px solid #000000;
    width: 0;
    height: 0;
  }
h3{
    will-change: font-size,transition;
    padding: 0em 0.5em;/*上下 左右の余白*/
    background: transparent;/*背景透明に*/
    font-size: 18px;
    font-family: 'migmixRegular';
    transition: all .9s;
}
h3.hover:hover{
    will-change: font-size;
    text-decoration:none;
    font-size: 20px;
}
h4{
    font-family: 'migmixRegular';
    font-size: 16px;
}
body{
    color: #282c37;
    font-family: 'migmixRegular',sans-serif;
}
body.centertext{
    margin: auto;
    width: 90%;  /* 中央寄せ */
    max-width: 512px;   /* max-widthでレスポンシブ対応 */
}
body.article{
    margin: auto;
    width: 90%;  /* 中央寄せ */
    max-width: 960px;
}
/* p{ */
    /* overflow-y: scroll; *//* 不要 */
/* } */
a{
    text-decoration:none;
    transition: all .3s;
}
a:not(.noeffect):not(.gray):hover{    /*リンクホバー追加　.noeffectを除く*/
    color: #fff;
    background-color: 	#D0E9FF;
}
/* :not で共有ボタン横に記号表示されるの回避 :notが連続してるの気持ち悪い */
a:not(.noeffect):not([href^="https://haibala.com/"]):not(.local):not(.a2a_button_facebook):not(.a2a_button_twitter):not(.a2a_button_mastodon):not(.a2a_dd):before{    /* リンク横に記号追加 */
    margin: 0 3px;
    font-family: FontAwesome;
    vertical-align: middle;
    content: '\f0c1';
}
a.gray{ /* 目次用 */
    color: #282c37;
    font-family: 'migmixRegular';
}
code{
    width: 90%; /* あまり細いと小型端末で見えづらい */
    max-width: 960px;
    display: inline-block;
    font-family: 'FiraCodeRegular','migmixRegular';
    font-size: smaller;
    color: white;
    background-color: #282c37;
    padding: 0.1em 2.5em;
    border-radius: 0.5em;
    overflow-x: scroll;
}
code.instring{
    width: auto;
    display: inline-block;
    padding: 0.2em 0.4em;
    overflow-x: auto;
}
div.card{
    margin: 15px;
    width:85%;
    max-width: 832px;
    height:auto;
    padding: 10px 15px;
    background-color: #ffffff;
    box-shadow: 3px 3px 3px 1px #a1b1d1;
    box-sizing: border-box;
    border-radius: 1em;
}
div.logo{
    padding: 2em 2em;
    margin: auto;
    text-align:center;
}
ol {
    list-style: none;
}
li.parallel {   /* align images */
    list-style:none;
    display:inline-block;
    padding:10px 0;
    width:400px;
    height:auto;
    vertical-align:middle;
    text-align:center;
    }
#box {
    margin: auto;
    width: 320px;
    height: auto;
    padding: 10px;
    background-color: #ffffff;
    box-shadow: 3px 3px 3px 1px #a1b1d1;
    box-sizing: border-box;
    border-radius: 1em;
}
#box li {
    margin-top: 1px;
    margin-left: 25px;
}
span.roundborder{
    display: inline-block;
    width: 24px;
    height: 24px;
    margin: 2.5px 4px 0 0;
    padding-top: 2.5px;
    text-align: center;
    border-radius: 50%;
    border: 1px solid #282c37;
    background-color: #282c37;
    box-sizing: border-box;
    color: #FFFFFF;
}
.icon{
    width: 100px;
    max-width: 32%;
    height: auto;
}
.bold{
    font-family: 'migmixBold';
}
.li1{
    color: darkslategray;
}
.li2{
    color: darkslategray;
    font-size: x-small;
    margin: 0 0 0 0.5em;
    padding: 0;
}
.updated-date{
    font-size: small;
    color: black;
}
.font-bold{
    font-family: 'migmixBold';
}
.footer-copyright{
    font-size: small;
    color: gray;
}
.space{
    padding: 0.1em 2em;
}
.nospace{
    padding: 0em;/*文字周りの余白*/
    display: inline-block;  /* インラインブロックにする */
}
.square{
    padding: 1em;/*文字周りの余白*/
    display: inline-block;  /* インラインブロックにする */
    border: solid 3px;      /* 枠線指定 */
}
.round{
    border-radius: 0.5em;/*角丸*/
}
.shadow4 {
    box-shadow: 8px 8px 0.2px 0 rgb(0, 0, 0);
}
.shadowrotate{
    transition: box-shadow 0.4s ease-out, transform 0.4s ease-out;
    box-shadow: 0 12px 12px 1px #FFFFFF;
  }
.shadowrotate:hover{
    box-shadow: 0 12px 12px 0.5px #D0E9FF;
    transform: rotate(360deg);  /*ぐるぐるさせる*/
    transition: 0.4s;
}
/* 
.pophover{
    transition: box-shadow 0.4s ease-out, transform 0.4s ease-out;
    box-shadow: 0 12px 12px 1px #FFFFFF;
}
.pophover:hover{
    box-shadow: 0 12px 12px 1px #81A2FE;
}
.linkbutton{
    text-decoration:none;
    transition: all .3s;
}
.linkbutton:hover{
    color: #fff;
    font-size:120%;
    background-color: 	#D0E9FF;
}
*/

